# new_cast-Implementation

./: Any-g++.h  Any.h  CMakeLists.txt  GlobalFunctions.h  NewCast.h  README.md
Implementation/: CMakeLists.txt  NewCast.cpp
Implementation/NewCastItanium/: CMakeLists.txt  NewCastItanium.cpp  NewCastItanium.h  PolymorphicPropertiesUnix.cpp
Implementation/NewCastMSVC/: CMakeLists.txt  Definitions32.h  Definitions64.h  Functions.Win.cpp  NewCastMSVC.cpp
Testsuite/: CMakeLists.txt
Testsuite/Application/: CMakeLists.txt  Tests.cpp  Tests.h  main.cpp
Testsuite/Global/: Classes.h  Object.h  ObjectManager.h  ObjectTraits.h  TupleUtils.h
Testsuite/SharedCode/: CMakeLists.txt  GlobalFunctions.cpp  Object.cpp  ObjectManager.cpp  TestsShared.cpp  TestsShared.h
Testsuite/SharedLibrarySideTests/: CMakeLists.txt  SharedLibrarySideTests.cpp  SharedLibrarySideTests.h
